# FastAPI_Projects

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Learn_FastAPI/chapter_1/: books.py
Learn_FastAPI/chapter_2/: books2.py
Learn_FastAPI/chapter_3/: database.py  insert_sample_data.py  main.py  models.py
Learn_FastAPI/chapter_4/: README.md
Learn_FastAPI/chapter_4/TodoApp/: database.py  main.py  models.py
Learn_FastAPI/chapter_4/TodoApp/routers/: admin.py  auth.py  todos.py  users.py
Learn_FastAPI/chapter_4/TodoApp/test/: test_admin.py  test_auth.py  test_example.py  test_todos.py  test_users.py  utils.py
Learn_FastAPI/chapter_5/: README.md
Learn_FastAPI/chapter_5/TodoApp/: database.py  main.py  models.py
Learn_FastAPI/chapter_5/TodoApp/routers/: admin.py  auth.py  todos.py  users.py
Learn_FastAPI/chapter_5/TodoApp/templates/: home.html  layout.html  register.html  todo.html
Learn_FastAPI/chapter_5/TodoApp/test/: test_main.py  test_todos.py  test_users.py  utils.py
project_0/CRUD_App/: main.py
project_1/backend/: Dockerfile  README.md  crypto_portfolio.db
project_1/backend/app/: api.json  crypto_portfolio.db  main.py  models.py  schemas.py
project_1/frontend/: README.md  index.html  package-lock.json  package.json
project_1/frontend/Portfolio Tracker Frontend/: package-lock.json  package.json
project_1/frontend/src/: App.tsx
project_2/: main.py  read.md  temp.py
project_3/: fastapi-challenge.py  fastapi-challenge.py:Zone.Identifier  main.py  sudhanshu_fastapi-challenge.py  test.py
(+12 files in other folders)
